# sign-prosody-extraction

./: .gitignore  CITATION.bib  README.md  pyproject.toml  sign_prosody_extraction.ipynb
sign_prosody_extraction/: __init__.py  cli.py  csvexport.py
src/sign_prosody_extraction/: __init__.py  cli.py  plot.py  typing.py  visualize.py
src/sign_prosody_extraction/articulator/: cotracker.py  mediapipe.py
