[project]
name = "sign-prosody-extraction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Antonio F. G. Sevilla", email = "afgs@ucm.es" }
]
dependencies = [
    "torch>=2.2.2",
    "click>=8.1.7",
    "numpy>=1.26.4",
    "imageio[ffmpeg]>=2.34.0",
    "matplotlib>=3.8.4",
    "torchvision>=0.17.2",
    "nptyping>=2.5.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
sign-prosody-extraction = "sign_prosody_extraction.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sign_prosody_extraction"]
